--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body style="background-color: black; color: white;">
     <script src="game.js"></script>
-    <!-- <h1>Rock Paper Scissors</h1> -->
+    <h1>Rock Paper Scissors</h1>
     
 </body>
 </html>
