--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="gameUI.js" defer></script>
-    <style src="styles.css"></style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
